--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
 	<meta charset="UTF-8">
 	<base href="/">
@@ -12,14 +12,15 @@
 
 	<!-- JS -->
 	<script src="libs/angular/angular.min.js"></script>
-	<script src="libs/angular-route/angular-route.min.js"></script>
+	<script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="libs/angular-resource/angular-resource.min.js"></script>
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
 </head>
 
-<body ng-app="sampleApp" ng-controller="MainController">
+<body ng-controller="MainController">
 <div class="container">
 
 	<!-- HEADER -->
@@ -30,13 +31,13 @@
 
 		<!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
 		<ul class="nav navbar-nav">
-			<li><a href="/">Home</a></li>
-			<li><a href="/geeks">Geeks</a></li>
+			<li><a ui-sref="home" href="#">Home</a></li>
+			<li><a ui-sref="about" href="#">About</a></li>
 		</ul>
 	</nav>
 		
 	<!-- ANGULAR DYNAMIC CONTENT -->
-	<div ng-view></div>
+	<div ui-view></div>
 
 </div>
 </body>
